--- a/Hello's_Folder/Hello.html
+++ b/Hello's_Folder/Hello.html
@@ -6,7 +6,7 @@
 </head>
 <body bgcolor="lightblue">
 <p><h1 align="center" ><u>This is a Blog</u></h1></p>
-<p class="quotes">"Declare variables, not war"</p>
+ <p class="quotes"><h2>"Declare variables, not war"</h2></p>
 <h1>This page will be enhanced</h1>
  <h1>There Will Be An Update</h1>
   <h1>This is a basic site</h1>
